Added different colors to action bar messages (#3098)